Minor adjustments for Media Queries - Adjusted Bootstrap col-md on races as there was some overlap on text occuring -  Also adjusted the .col-spacing css class for the same issue for phone size on the classes

--- a/index.css
+++ b/index.css
@@ -511,6 +511,10 @@ button:focus {
     width: 4em;
   }
 
+  .col-spacing {
+    margin: 0 0.5em 0 0.5em;
+  }
+
   .race-btns {
     height: 5em;
     width: 4em;
